--- a/VAERS.ipynb
+++ b/VAERS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOb9sDKiFACk5l2J8N2IoKv",
+      "authorship_tag": "ABX9TyMtYUheJwWA4Bxa7lj1v/n7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "V5aZWklDMd7S"
       },
-      "execution_count": 70,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "VnkB6stflJnj"
       },
-      "execution_count": 71,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -77,9 +77,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JDVyPUo7mdHo",
-        "outputId": "43324ec3-0771-4d2a-e8a5-0fa4115ad68f"
+        "outputId": "7268814b-e037-4449-ea23-b563d7095dfc"
       },
-      "execution_count": 50,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,6 +102,11 @@
         "- How many people were disable o die due to the vaccine\n",
         "- Number of VAERS by state\n",
         "- Plot top 20 symtoms\n",
+        "# Questions to be answer\n",
+        "1.  Do people who experience side effects from the vaccine tend to experience them sooner or later after vaccination?\n",
+        "2.  Can factors like age, gender, vaccine brand, and medical conditions help predict how strongly someone might react to the vaccine?\n",
+        "3.  Is there a noticeable difference in age between those who have no serious side effects and those who do?\n",
+        "\n",
         "\n",
         "\n",
         "\n"
@@ -123,34 +128,34 @@
       "metadata": {
         "id": "igTMmUkr0TMU"
       },
-      "execution_count": 78,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# prompt: how many rows and columns are there for each df\n",
+        "# prompt: print shape fo each dataframe\n",
         "\n",
-        "print(\"df_symptoms_2019 has\", df_symptoms_2019.shape[0], \"rows and\", df_symptoms_2019.shape[1], \"columns\")\n",
-        "print(\"df_vaers_data_2019 has\", df_vaers_data_2019.shape[0], \"rows and\", df_vaers_data_2019.shape[1], \"columns\")\n",
-        "print(\"df_vaers_vax_2019 has\", df_vaers_vax_2019.shape[0], \"rows and\", df_vaers_vax_2019.shape[1], \"columns\")\n"
+        "print(\"Shape of df_symptoms_2019:\", df_symptoms_2019.shape)\n",
+        "print(\"Shape of df_vaers_data_2019:\", df_vaers_data_2019.shape)\n",
+        "print(\"Shape of df_vaers_vax_2019:\", df_vaers_vax_2019.shape)\n"
       ],
       "metadata": {
-        "id": "YVQMrYA27HFH",
-        "outputId": "ccba4033-56b0-4f77-f0b2-ea5b1a6b68f6",
+        "id": "FhwX7WueePyH",
+        "outputId": "10e81cb5-1428-4b5c-88e6-dba859f7630d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 87,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "df_symptoms_2019 has 60180 rows and 11 columns\n",
-            "df_vaers_data_2019 has 48438 rows and 35 columns\n",
-            "df_vaers_vax_2019 has 61194 rows and 8 columns\n"
+            "Shape of df_symptoms_2019: (60180, 11)\n",
+            "Shape of df_vaers_data_2019: (48438, 35)\n",
+            "Shape of df_vaers_vax_2019: (61194, 8)\n"
           ]
         }
       ]
@@ -179,11 +184,11 @@
         "print(f\"df_vaers_vax_2019 has {percent_null_values:.2f}% null values\")\n"
       ],
       "metadata": {
-        "id": "l-0WrPd86CxW",
-        "outputId": "c3cf32d2-75a6-4be7-ca65-e89895a94471",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l-0WrPd86CxW",
+        "outputId": "c3cf32d2-75a6-4be7-ca65-e89895a94471"
       },
       "execution_count": 88,
       "outputs": [
@@ -258,14 +263,43 @@
     {
       "cell_type": "code",
       "source": [
+        "# prompt: how many rows and columns are there for each df\n",
+        "\n",
+        "print(\"df_symptoms_2019 has\", df_symptoms_2019.shape[0], \"rows and\", df_symptoms_2019.shape[1], \"columns\")\n",
+        "print(\"df_vaers_data_2019 has\", df_vaers_data_2019.shape[0], \"rows and\", df_vaers_data_2019.shape[1], \"columns\")\n",
+        "print(\"df_vaers_vax_2019 has\", df_vaers_vax_2019.shape[0], \"rows and\", df_vaers_vax_2019.shape[1], \"columns\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YVQMrYA27HFH",
+        "outputId": "ccba4033-56b0-4f77-f0b2-ea5b1a6b68f6"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "df_symptoms_2019 has 60180 rows and 11 columns\n",
+            "df_vaers_data_2019 has 48438 rows and 35 columns\n",
+            "df_vaers_vax_2019 has 61194 rows and 8 columns\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df_2019_VAERSVAX.isnull().sum()"
       ],
       "metadata": {
-        "id": "u3pBa-QP6tOI",
-        "outputId": "6667ab58-542b-4f17-9aef-6252b717c3ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "u3pBa-QP6tOI",
+        "outputId": "6667ab58-542b-4f17-9aef-6252b717c3ce"
       },
       "execution_count": 83,
       "outputs": [
@@ -332,11 +366,11 @@
         "df_vaers_data_2019.info()"
       ],
       "metadata": {
-        "id": "QoaXAptJ5o6n",
-        "outputId": "e1f369ef-20c9-4877-beb8-d654c7959cfe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QoaXAptJ5o6n",
+        "outputId": "e1f369ef-20c9-4877-beb8-d654c7959cfe"
       },
       "execution_count": 81,
       "outputs": [
@@ -409,11 +443,11 @@
         "df_vaers_vax_2019['VAX_MANU'].value_counts()\n"
       ],
       "metadata": {
-        "id": "FvsVIHMMwTFL",
-        "outputId": "2d2cb0b3-335f-4f31-f6fb-b5f38b8d65e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FvsVIHMMwTFL",
+        "outputId": "2d2cb0b3-335f-4f31-f6fb-b5f38b8d65e6"
       },
       "execution_count": 75,
       "outputs": [
@@ -489,11 +523,11 @@
         "df_combined_2019.groupby('VAX_MANU')['DIED'].value_counts().sort_values(ascending=False)\n"
       ],
       "metadata": {
-        "id": "qusGqSgLxDrp",
-        "outputId": "da61ec38-1406-4759-c91d-4e4db71de847",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qusGqSgLxDrp",
+        "outputId": "da61ec38-1406-4759-c91d-4e4db71de847"
       },
       "execution_count": 80,
       "outputs": [
@@ -1119,11 +1153,11 @@
         "df_combined_2019.groupby('VAX_MANU')['DIED'].sum()\n"
       ],
       "metadata": {
-        "id": "s705b1zFtEyk",
-        "outputId": "21599c04-db98-417f-b39d-60d7eed24519",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s705b1zFtEyk",
+        "outputId": "21599c04-db98-417f-b39d-60d7eed24519"
       },
       "execution_count": 58,
       "outputs": [
