--- a/VAERS.ipynb
+++ b/VAERS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtYUheJwWA4Bxa7lj1v/n7",
+      "authorship_tag": "ABX9TyPFdvj86N7EcCJ0ezB3ucMG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "V5aZWklDMd7S"
       },
-      "execution_count": 1,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "VnkB6stflJnj"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
         "id": "JDVyPUo7mdHo",
         "outputId": "7268814b-e037-4449-ea23-b563d7095dfc"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +94,7 @@
       "cell_type": "markdown",
       "source": [
         "#Things to do\n",
-        "- Load all 2019 files\n",
+        "- Load all 2021 files\n",
         "- Understand Datasets\n",
         "- Merge Datasets\n",
         "- Data Clean-up\n",
@@ -119,43 +119,56 @@
       "cell_type": "code",
       "source": [
         "# load 2019SYMPTOMS.csv\n",
-        "df_symptoms_2019 = pd.read_csv('2019SYMPTOMS.csv')\n",
-        "df_vaers_data_2019 = pd.read_csv('2019VAERSDATA.csv',encoding=\"Windows-1252\")\n",
-        "df_vaers_vax_2019 = pd.read_csv('2019VAERSVAX.csv')\n",
+        "df_symptoms_2021 = pd.read_csv('2021VAERSSYMPTOMS.csv')\n",
+        "df_vaers_data_2021 = pd.read_csv('2021VAERSDATA.csv',encoding=\"Windows-1252\")\n",
+        "df_vaers_vax_2021 = pd.read_csv('2021VAERSVAX.csv',encoding=\"Windows-1252\")\n",
         "\n",
         "#df_symptoms_2020 = pd.read_csv('2020VAERSSYMPTOMS.csv')\n"
       ],
       "metadata": {
-        "id": "igTMmUkr0TMU"
+        "id": "igTMmUkr0TMU",
+        "outputId": "b6c52e6e-6608-4c47-fd85-e61e46c84d89",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 4,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-26-473b21d273a8>:3: DtypeWarning: Columns (7,12,23,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "  df_vaers_data_2021 = pd.read_csv('2021VAERSDATA.csv',encoding=\"Windows-1252\")\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# prompt: print shape fo each dataframe\n",
         "\n",
-        "print(\"Shape of df_symptoms_2019:\", df_symptoms_2019.shape)\n",
-        "print(\"Shape of df_vaers_data_2019:\", df_vaers_data_2019.shape)\n",
-        "print(\"Shape of df_vaers_vax_2019:\", df_vaers_vax_2019.shape)\n"
+        "print(\"Shape of df_symptoms_2021:\", df_symptoms_2021.shape)\n",
+        "print(\"Shape of df_vaers_data_2021:\", df_vaers_data_2021.shape)\n",
+        "print(\"Shape of df_vaers_vax_2021:\", df_vaers_vax_2021.shape)\n"
       ],
       "metadata": {
         "id": "FhwX7WueePyH",
-        "outputId": "10e81cb5-1428-4b5c-88e6-dba859f7630d",
+        "outputId": "adb892fc-473c-49dc-e1b9-12db1bfee9ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Shape of df_symptoms_2019: (60180, 11)\n",
-            "Shape of df_vaers_data_2019: (48438, 35)\n",
-            "Shape of df_vaers_vax_2019: (61194, 8)\n"
+            "Shape of df_symptoms_2021: (1003896, 11)\n",
+            "Shape of df_vaers_data_2021: (247773, 35)\n",
+            "Shape of df_vaers_vax_2021: (797081, 8)\n"
           ]
         }
       ]
@@ -190,7 +203,7 @@
         "id": "l-0WrPd86CxW",
         "outputId": "c3cf32d2-75a6-4be7-ca65-e89895a94471"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +289,7 @@
         "id": "YVQMrYA27HFH",
         "outputId": "ccba4033-56b0-4f77-f0b2-ea5b1a6b68f6"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +314,7 @@
         "id": "u3pBa-QP6tOI",
         "outputId": "6667ab58-542b-4f17-9aef-6252b717c3ce"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -335,7 +348,7 @@
         "id": "gNCle-NrWOgF",
         "outputId": "6dd4a040-42fb-40c1-cf0b-d4633f53f5b3"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,7 +385,7 @@
         "id": "QoaXAptJ5o6n",
         "outputId": "e1f369ef-20c9-4877-beb8-d654c7959cfe"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,7 +462,7 @@
         "id": "FvsVIHMMwTFL",
         "outputId": "2d2cb0b3-335f-4f31-f6fb-b5f38b8d65e6"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -497,7 +510,7 @@
       "metadata": {
         "id": "IRLVZesB1M84"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -512,7 +525,7 @@
       "metadata": {
         "id": "HFMVPSA0zA7p"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -529,7 +542,7 @@
         "id": "qusGqSgLxDrp",
         "outputId": "da61ec38-1406-4759-c91d-4e4db71de847"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -567,7 +580,7 @@
         "id": "BaTzRqzHzojd",
         "outputId": "934ac1ec-21b4-4583-a247-7ca29a3afa83"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -632,7 +645,7 @@
         "id": "VdBuJ7PKNbtB",
         "outputId": "d281a364-9891-4b88-a5c1-606ac730732d"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1076,7 +1089,7 @@
         "id": "r_2UE1sk45YA",
         "outputId": "8d1dcc6e-52db-44d5-8d97-647c44aa0b8e"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1159,7 +1172,7 @@
         "id": "s705b1zFtEyk",
         "outputId": "21599c04-db98-417f-b39d-60d7eed24519"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1219,7 +1232,7 @@
         "id": "gyUnr96vAiEN",
         "outputId": "ad7b98ec-78ce-456a-b569-c87cbe937e19"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1253,7 +1266,7 @@
         "id": "ujZ7fczVBufq",
         "outputId": "1d9b17a3-0bb4-478c-85ec-0cfe0cfde433"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1284,7 +1297,7 @@
         "id": "elo5Emt0CEpZ",
         "outputId": "f95f5ff9-dee5-4556-c829-cce8d5d18baa"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1316,7 +1329,7 @@
         "id": "7FkwYHjc57Kg",
         "outputId": "8f6adf23-c121-474a-fb5e-e369e3b3a629"
       },
-      "execution_count": 163,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1715,7 +1728,7 @@
         "id": "yRVV4Q8iCib2",
         "outputId": "67fada31-0e90-4f38-efed-889399a24556"
       },
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1754,7 +1767,7 @@
         "id": "_adgYFx60Wfs",
         "outputId": "f5b909ca-2ae4-4419-c63c-655e3423f3c0"
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1795,7 +1808,7 @@
         "id": "GXtWi6QX0zgG",
         "outputId": "c08826d3-c074-4076-a196-2b2b7a43b46d"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1837,7 +1850,7 @@
         "id": "a9URYXd9fCq1",
         "outputId": "45011107-907a-4502-9866-c213ae5a8da4"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1868,7 +1881,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1895,7 +1908,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1930,7 +1943,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2065,7 +2078,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
