--- a/VAERS.ipynb
+++ b/VAERS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0MJowzK0QOL7VdsYgfZlJ",
+      "authorship_tag": "ABX9TyNjtSWn3vVy2j8rkhZ8BBJq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1148,12 +1148,43 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# prompt: count top 10 symtoms\n",
+        "\n",
+        "df_combine_2021['SYMPTOM1'].value_counts().head(10)\n",
+        "df_combine_2021['SYMPTOM2'].value_counts().head(10)\n"
+      ],
       "metadata": {
-        "id": "XI016CK0u0pf"
+        "id": "XI016CK0u0pf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "41ecb61e-b540-4cca-af6b-7d37157b633a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SYMPTOM2\n",
+              "Headache                   18231\n",
+              "Fatigue                    16363\n",
+              "Chills                     13155\n",
+              "Pyrexia                     8189\n",
+              "Dizziness                   8186\n",
+              "Pain                        7991\n",
+              "Injection site pain         7321\n",
+              "Nausea                      6471\n",
+              "Pain in extremity           5552\n",
+              "Injection site pruritus     5463\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
     },
     {
       "cell_type": "code",
