--- a/VAERS.ipynb
+++ b/VAERS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMNrc7aunic7WG3ZodQ2wn",
+      "authorship_tag": "ABX9TyNOEsq8bmQp8wEc4Pq3uoUK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "V5aZWklDMd7S"
       },
-      "execution_count": 23,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -106,6 +106,7 @@
         "1.  Do people who experience side effects from the vaccine tend to experience them sooner or later after vaccination?\n",
         "2.  Can factors like age, gender, vaccine brand, and medical conditions help predict how strongly someone might react to the vaccine?\n",
         "3.  Is there a noticeable difference in age between those who have no serious side effects and those who do?\n",
+        "4. What are the most common VAERS presented on pacients with COVID-19 vaccine\n",
         "\n",
         "\n",
         "\n",
@@ -119,7 +120,7 @@
       "cell_type": "code",
       "source": [
         "# load 2021YMPTOMS.csv\n",
-        "df_symptoms_2021 = pd.read_csv('2021VAERSSYMPTOMS.csv')\n",
+        "df_symptoms_2021 =d pd.read_csv('2021VAERSSYMPTOMS.csv')\n",
         "df_vaers_data_2021 = pd.read_csv('2021VAERSDATA.csv',encoding=\"Windows-1252\")\n",
         "df_vaers_vax_2021 = pd.read_csv('2021VAERSVAX.csv',encoding=\"Windows-1252\")\n",
         "\n",
@@ -128,18 +129,22 @@
       "metadata": {
         "id": "igTMmUkr0TMU",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 214
         },
-        "outputId": "b6c52e6e-6608-4c47-fd85-e61e46c84d89"
+        "outputId": "88815b72-da26-4211-d55b-422aa49d2478"
       },
-      "execution_count": 26,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-26-473b21d273a8>:3: DtypeWarning: Columns (7,12,23,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-            "  df_vaers_data_2021 = pd.read_csv('2021VAERSDATA.csv',encoding=\"Windows-1252\")\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'pd' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-eb1f4fdf0511>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# load 2021YMPTOMS.csv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf_symptoms_2021\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'2021VAERSSYMPTOMS.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mdf_vaers_data_2021\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'2021VAERSDATA.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Windows-1252\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdf_vaers_vax_2021\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'2021VAERSVAX.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Windows-1252\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
           ]
         }
       ]
@@ -160,7 +165,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,7 +208,7 @@
         "id": "l-0WrPd86CxW",
         "outputId": "a63b899d-0347-456c-af2d-40daebdf1b01"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +237,7 @@
         "id": "YVQMrYA27HFH",
         "outputId": "f8f9825b-4871-46dc-92aa-504a311ece54"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +262,7 @@
         "id": "u3pBa-QP6tOI",
         "outputId": "c3f9179c-78c1-4934-da19-14ee5250b276"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -291,7 +296,7 @@
         "id": "gNCle-NrWOgF",
         "outputId": "1e8609c4-84ba-4d92-fb75-518e8ce9e370"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,7 +333,7 @@
         "id": "QoaXAptJ5o6n",
         "outputId": "28da0a8e-ddc6-4ed7-a1d0-60293de1e2fa"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +370,7 @@
         },
         "outputId": "ddb35237-b1c6-45b1-f880-419774ae4621"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -404,7 +409,7 @@
         "id": "FvsVIHMMwTFL",
         "outputId": "e9fce089-9e9b-4934-a0db-df2fbc3bfb64"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -455,7 +460,7 @@
       "metadata": {
         "id": "h22Y70aDBrax"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -472,7 +477,7 @@
         "id": "qusGqSgLxDrp",
         "outputId": "7615772c-1ea5-46e2-f4b2-082c2527ae9a"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +515,7 @@
         "id": "BaTzRqzHzojd",
         "outputId": "e99d38c1-92d2-45af-eaf3-dc6de8d02366"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -592,7 +597,7 @@
         "id": "VdBuJ7PKNbtB",
         "outputId": "59c88b4b-8515-4e66-bc35-514b2402baa7"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1036,7 +1041,7 @@
         "id": "r_2UE1sk45YA",
         "outputId": "e97ed05f-090b-43cf-bf32-57e37d492806"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1120,7 +1125,7 @@
         "id": "s705b1zFtEyk",
         "outputId": "3561a000-314c-475a-fcad-82542f630284"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1161,7 +1166,7 @@
         },
         "outputId": "41ecb61e-b540-4cca-af6b-7d37157b633a"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1196,7 +1201,7 @@
       "metadata": {
         "id": "gyUnr96vAiEN"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1209,7 +1214,7 @@
       "metadata": {
         "id": "ujZ7fczVBufq"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1227,7 +1232,7 @@
         "id": "elo5Emt0CEpZ",
         "outputId": "d81d916a-20c5-42ac-a7fb-f17b0a09b2a6"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1780,7 +1785,7 @@
         "id": "a9URYXd9fCq1",
         "outputId": "e4b49043-5b01-45ab-e312-71988e1c1db2"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
